added proper donation id checker

--- a/frontend/donate.html
+++ b/frontend/donate.html
@@ -82,6 +82,13 @@
     </div>
 </div>
 
+<div class="message-overlay" id="donate-message" aria-hidden="true">
+    <div class="message-box">
+        <div class="message-content" id="message-text"></div>
+        <div style="text-align:right;margin-top:12px;"><button class="btn primary" id="message-ok">OK</button></div>
+    </div>
+</div>
+
 <script src="js/donate.js"></script>
 </body>
 </html>
