--- a/frontend/article.html
+++ b/frontend/article.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/article.css">
 </head>
 
 <body data-page="article">
