--- a/good/good.html
+++ b/good/good.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +10,23 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/good.css">
 </head>
+
 <body data-page="home" style="background-color: #91080D;">
-{goodheader}
-<div class="hero">
-    <div class="hero-content">
-        <h1 class="hero-title">Intelligentsia</h1>
-        <p class="hero-sub">Lorem ipsum dolor sit amet</p>
+    {goodheader}
+    <div class="hero">
+        <div class="hero-content">
+            <h1 class="hero-title">INTELLIGENTSIA</h1>
+            <p class="hero-sub">Lorem ipsum dolor sit amet</p>
+        </div>
+        <img src="assets/istar.png" alt="" class="hero-istar">
     </div>
-    <img src="assets/istar.png" alt="" class="hero-istar">
-</div>
-<div class="bottom-strip">
-    <div class="strip-item">Refuse</div>
-    <div class="strip-line" aria-hidden="true"></div>
-    <div class="strip-item">Revolt</div>
-    <div class="strip-line" aria-hidden="true"></div>
-    <div class="strip-item">Resist</div>
-</div>
+    <div class="bottom-strip">
+        <div class="strip-item">Refuse</div>
+        <div class="strip-line" aria-hidden="true"></div>
+        <div class="strip-item">Revolt</div>
+        <div class="strip-line" aria-hidden="true"></div>
+        <div class="strip-item">Resist</div>
+    </div>
 </body>
+
 </html>
