--- a/good/good.html
+++ b/good/good.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/good.css">
 </head>
 
-<body data-page="home" style="background-color: #91080D;">
+<body data-page="home" style="background-color: #90090C;">
     {goodheader}
     <div class="hero">
         <div class="hero-content">
