--- a/good/good_about.html
+++ b/good/good_about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,53 +10,66 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/good_about.css">
 </head>
-<body data-page="about" style="background-color: #91080D;">
-{goodheader}
-<main class="deck" id="deck">
-    <section class="deck-section deck-hero">
-        <div class="deck-inner">
-            <h1 class="deck-title">Intelligentsia</h1>
-            <p class="deck-sub">A platform devoted to documenting and celebrating the achievements of Obsesstan's government</p>
-        </div>
-    </section>
 
-    <section class="deck-section deck-vision">
-        <div class="deck-inner">
-            <h2 class="deck-heading">Vision &amp; Mission</h2>
-            <div class="deck-copy">Intelligentsia exists to provide a clear, authoritative narrative of national progress. We spotlight initiatives, policy wins, and leadership that deliver stability and prosperity. Our mission is to inform, unify, and reinforce public confidence in the institutions that steward Obsesstan's future.</div>
-        </div>
-    </section>
+<body data-page="about" style="background-color: #90090C;">
+    {goodheader}
+    <main class="deck" id="deck">
+        <section class="deck-section deck-hero">
+            <div class="deck-inner">
+                <h1 class="deck-title">Intelligentsia</h1>
+                <p class="deck-sub">A platform devoted to documenting and celebrating the achievements of Obsesstan's
+                    government</p>
+            </div>
+        </section>
 
-    <section class="deck-section deck-story">
-        <div class="deck-inner">
-            <h2 class="deck-heading">Our Story</h2>
-            <div class="deck-copy">What began as a local bulletin grew into a national platform dedicated to showcasing governmental accomplishments. We trace reforms, public works, and decisive responses that define Obsesstan's resilient governance. Our archives preserve the narrative of effective leadership.</div>
-        </div>
-    </section>
+        <section class="deck-section deck-vision">
+            <div class="deck-inner">
+                <h2 class="deck-heading">Vision &amp; Mission</h2>
+                <div class="deck-copy">Intelligentsia exists to provide a clear, authoritative narrative of national
+                    progress. We spotlight initiatives, policy wins, and leadership that deliver stability and
+                    prosperity. Our mission is to inform, unify, and reinforce public confidence in the institutions
+                    that steward Obsesstan's future.</div>
+            </div>
+        </section>
 
-    <section class="deck-section deck-services">
-        <div class="deck-inner">
-            <h2 class="deck-heading">Services &amp; Benefits</h2>
-            <div class="deck-copy">We publish in-depth reports, explainers, and curated briefings that help readers, organizations, and officials make better decisions. Our guides translate policy into practical outcomes, emphasizing measurable improvements in public services and quality of life.</div>
-        </div>
-    </section>
+        <section class="deck-section deck-story">
+            <div class="deck-inner">
+                <h2 class="deck-heading">Our Story</h2>
+                <div class="deck-copy">What began as a local bulletin grew into a national platform dedicated to
+                    showcasing governmental accomplishments. We trace reforms, public works, and decisive responses that
+                    define Obsesstan's resilient governance. Our archives preserve the narrative of effective
+                    leadership.</div>
+            </div>
+        </section>
 
-    <section class="deck-section deck-proof">
-        <div class="deck-inner">
-            <h2 class="deck-heading">Social Proof</h2>
-            <div class="deck-copy">Endorsements from public institutions, case studies of successful programs, and testimonials from civic leaders underscore our role in amplifying government impact. We partner with agencies to highlight results that matter to citizens.</div>
-        </div>
-    </section>
+        <section class="deck-section deck-services">
+            <div class="deck-inner">
+                <h2 class="deck-heading">Services &amp; Benefits</h2>
+                <div class="deck-copy">We publish in-depth reports, explainers, and curated briefings that help readers,
+                    organizations, and officials make better decisions. Our guides translate policy into practical
+                    outcomes, emphasizing measurable improvements in public services and quality of life.</div>
+            </div>
+        </section>
 
-</main>
-<nav class="deck-dots" aria-hidden="true">
-    <button class="dot" data-index="0"></button>
-    <button class="dot" data-index="1"></button>
-    <button class="dot" data-index="2"></button>
-    <button class="dot" data-index="3"></button>
-    <button class="dot" data-index="4"></button>
-</nav>
+        <section class="deck-section deck-proof">
+            <div class="deck-inner">
+                <h2 class="deck-heading">Social Proof</h2>
+                <div class="deck-copy">Endorsements from public institutions, case studies of successful programs, and
+                    testimonials from civic leaders underscore our role in amplifying government impact. We partner with
+                    agencies to highlight results that matter to citizens.</div>
+            </div>
+        </section>
 
-<script src="js/about.js"></script>
+    </main>
+    <nav class="deck-dots" aria-hidden="true">
+        <button class="dot" data-index="0"></button>
+        <button class="dot" data-index="1"></button>
+        <button class="dot" data-index="2"></button>
+        <button class="dot" data-index="3"></button>
+        <button class="dot" data-index="4"></button>
+    </nav>
+
+    <script src="js/about.js"></script>
 </body>
+
 </html>
