--- a/good/article.html
+++ b/good/article.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/news.css">
-    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/good_news.css">
+    <link rel="stylesheet" href="css/good_article.css">
 </head>
 
 <body data-page="article">
