--- a/frontend/donate.html
+++ b/frontend/donate.html
@@ -22,15 +22,15 @@
     <div class="donate-layout">
         <div class="tiers">
             <div class="tier">
-                <div class="amount">10 bobux</div>
+                <div class="amount">10 ObsessTokens</div>
                 <p>Monthly supporter level. Helps with hosting and daily operations.</p>
             </div>
             <div class="tier">
-                <div class="amount">25 bobux</div>
+                <div class="amount">25 ObsessTokens</div>
                 <p>Provides research resources and reporting support.</p>
             </div>
             <div class="tier">
-                <div class="amount">100 bobux</div>
+                <div class="amount">100 ObsessTokens</div>
                 <p>Funds staff briefings and investigative pieces highlighting government programs.</p>
             </div>
             <div class="tier">
@@ -44,10 +44,10 @@
                 <div class="form-row">
                     <label for="amount">Donation amount</label>
                     <select id="amount" class="select" style="font-size: Coolvetica;">
-                        <option>10 bobux</option>
-                        <option>25 bobux</option>
-                        <option>50 bobux</option>
-                        <option>100 bobux</option>
+                        <option>10 ObsessTokens</option>
+                        <option>25 ObsessTokens</option>
+                        <option>50 ObsessTokens</option>
+                        <option>100 ObsessTokens</option>
                         <option>Other</option>
                     </select>
                 </div>
