--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -158,11 +158,22 @@
                             messageOverlay.classList.remove('show');
                             messageOverlay.setAttribute('aria-hidden', 'true');
                         }
-                        messageOk.removeEventListener('click', onOk);
+                        if (messageOk) messageOk.removeEventListener('click', onOk);
                         try { if (prev && typeof prev.focus === 'function') prev.focus(); } catch (e) { }
                         resolve();
                     }
-                    messageOk.addEventListener('click', onOk);
+                    if (messageOk) {
+                        messageOk.addEventListener('click', onOk);
+                    } else {
+                        setTimeout(function () {
+                            if (messageOverlay) {
+                                messageOverlay.classList.remove('show');
+                                messageOverlay.setAttribute('aria-hidden', 'true');
+                            }
+                            try { if (prev && typeof prev.focus === 'function') prev.focus(); } catch (e) { }
+                            resolve();
+                        }, 2000);
+                    }
                 });
             }
         });
@@ -170,7 +181,9 @@
     <div class="message-overlay" id="donate-message" aria-hidden="true">
         <div class="message-box">
             <div class="message-content" id="message-text"></div>
-
+            <div class="message-actions">
+                <button class="btn" id="message-ok">OK</button>
+            </div>
         </div>
     </div>
     <script src="js/checkout-payment.js"></script>
