--- a/good/good_about.html
+++ b/good/good_about.html
@@ -17,7 +17,7 @@
         <section class="deck-section deck-hero">
             <div class="deck-inner">
                 <h1 class="deck-title">Intelligentsia</h1>
-                <p class="deck-sub">A platform devoted to documenting and celebrating the achievements of Obsesstan's
+                <p class="deck-sub">A platform devoted to getting justice from Obsesstan's oppresive
                     government</p>
             </div>
         </section>
